force-app/main/default/objects/VisualAntidote__Submission_Draft__c/VisualAntidote__Submission_Draft__c.object-meta.xml
<CustomObject>
    <label>Submission Draft</label>
    <nameField>
        <displayFormat>FDS-{0000}</displayFormat>
        <label>Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submission Drafts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>