force-app/main/default/objects/VisualAntidote__Submission_Draft__c/fields/VisualAntidote__Email__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>