force-app/main/default/objects/VisualAntidote__Submission_Draft__c/fields/VisualAntidote__Form__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form</label>
    <referenceTo>VisualAntidote__Previous_Form__c</referenceTo>
    <relationshipLabel>Submission Drafts</relationshipLabel>
    <relationshipName>Submission_Drafts</relationshipName>
    <type>Lookup</type>
</CustomField>