force-app/main/default/objects/VisualAntidote__Submission_Draft__c/fields/VisualAntidote__Submitted_Data_XML__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Submitted_Data_XML__c</fullName>
    <label>Submitted Data XML</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>