force-app/main/default/objects/VisualAntidote__Submission_Draft__c/fields/VisualAntidote__Submitted_Prefill_Obj_Id__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Submitted_Prefill_Obj_Id__c</fullName>
    <label>Submitted Prefill Obj Id</label>
    <type>TextArea</type>
</CustomField>